# SmartHomeUtils

./: .gitignore  Doxyfile  LICENSE  README.md  pyproject.toml  tox.ini
.github/workflows/: build-pages.yml  deploy-pages.yml  dev-build-pages.yml  dist.yml  pages.yml
GMSmartHomeDevice/: GMSmartHomeDevice.cpp  GMSmartHomeDevice.h
docs/: conf.py  index.rst
docs/GMSmartHomeDevice/: index.rst
docs/_static/: custom.css
docs/opensourcesmartdevice/: index.rst
src/gmsmarthomedevice/: MQTTClient.py
src/opensourcesmartdevice/: MQTTClient.py  __init__.py
