[project]
name = "GMSmartHomeDevice"
authors = [
    { name = "Greg Molskow"}
]
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "paho-mqtt>=2.1.0",
    "uv-build>=0.7.9",
]

[build-system]
requires = ["uv_build>=0.7.9,<0.8.0"]
build-backend = "uv_build"

