[project]
name = "OpenSourceSmartDevice"
authors = [
    { name = "Greg Molskow"}
]
version = "0.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "paho-mqtt",
]

[project.optional-dependencies]
build = [
    "uv-build>=0.7.9",
]


[build-system]
requires = ["uv_build>=0.7.9,<0.8.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 128

